--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <finalName>jeo-${project.version}</finalName>
+          <descriptors>
+            <descriptor>cli.xml</descriptor>
+          </descriptors>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
  
