--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jeo</groupId>
     <artifactId>jeo-parent</artifactId>
-    <version>0-SNAPSHOT</version>
+    <version>0.5</version>
   </parent>
 
   <groupId>org.jeo</groupId>
