Package rename from org.jeo to io.jeo. See jeo/jeo#88.

--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
   </profiles>
 
   <properties>
-    <forbiddenapis.exclude>org/jeo/cli/JeoCLI.class</forbiddenapis.exclude>
+    <forbiddenapis.exclude>io/jeo/cli/JeoCLI.class</forbiddenapis.exclude>
   </properties>
 
 </project>
