--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </dependency>
     <dependency>
       <groupId>io.jeo</groupId>
-      <artifactId>jeo-protobuf</artifactId>
+      <artifactId>jeo-geobuf</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
